# Doc_Chat

./: .gitignore  main.py  pyproject.toml
docs/: UI_PLAN.md
multi_doc_chat/config/: config.py  config.yaml
multi_doc_chat/exception/: exception.py
multi_doc_chat/logging/: __init__.py  logger.py
multi_doc_chat/src/Generation/: rag_chain.py
multi_doc_chat/src/Retrieval_engine/: __init__.py  retriever.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: chat_history.py  config_loader.py  file_manager.py  hash_store.py  model_loader.py  text_cleaner.py
notebook/: exp.ipynb  rag.ipynb
routes/: chat_router.py  document_router.py  ingestion_router.py  session_router.py
streamlit_app/: api_client.py  app.py
