[project]
name = "doc-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
]
