[project]
name = "doc-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "ragas>=0.4.3",
    "rapidocr-onnxruntime>=1.4.4",
    "motor>=3.7.0",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
    "httpx>=0.28.0",
    "streamlit>=1.45.0",
]
